constantine-rust/constantine-sys/src/bindings64.rs

unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_conjneg_in_place(a: *mut bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_prod(
        r: *mut bn254_snarks_fp2,
        a: *const bn254_snarks_fp2,
        b: *const bn254_snarks_fp2,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_mul_in_place(a: *mut bn254_snarks_fp2, b: *const bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_square(r: *mut bn254_snarks_fp2, a: *const bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_square_in_place(a: *mut bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_div2(a: *mut bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_inv(r: *mut bn254_snarks_fp2, a: *const bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_inv_in_place(a: *mut bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_ccopy(
        a: *mut bn254_snarks_fp2,
        b: *const bn254_snarks_fp2,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_cset_zero(a: *mut bn254_snarks_fp2, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_cset_one(a: *mut bn254_snarks_fp2, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_cneg_in_place(a: *mut bn254_snarks_fp2, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_cadd_in_place(
        a: *mut bn254_snarks_fp2,
        b: *const bn254_snarks_fp2,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_csub_in_place(
        a: *mut bn254_snarks_fp2,
        b: *const bn254_snarks_fp2,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_is_square(a: *const bn254_snarks_fp2) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_sqrt_in_place(a: *mut bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_sqrt_if_square_in_place(a: *mut bn254_snarks_fp2) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_aff_is_eq(
        P: *const bn254_snarks_g1_aff,
        Q: *const bn254_snarks_g1_aff,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_aff_is_neutral(P: *const bn254_snarks_g1_aff) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_aff_set_neutral(P: *mut bn254_snarks_g1_aff);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_aff_ccopy(
        P: *mut bn254_snarks_g1_aff,
        Q: *const bn254_snarks_g1_aff,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_aff_is_on_curve(
        x: *const bn254_snarks_fp,
        y: *const bn254_snarks_fp,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_aff_neg(P: *mut bn254_snarks_g1_aff, Q: *const bn254_snarks_g1_aff);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_aff_neg_in_place(P: *mut bn254_snarks_g1_aff);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_is_eq(
        P: *const bn254_snarks_g1_jac,
        Q: *const bn254_snarks_g1_jac,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_is_neutral(P: *const bn254_snarks_g1_jac) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_set_neutral(P: *mut bn254_snarks_g1_jac);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_ccopy(
        P: *mut bn254_snarks_g1_jac,
        Q: *const bn254_snarks_g1_jac,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_neg(P: *mut bn254_snarks_g1_jac, Q: *const bn254_snarks_g1_jac);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_neg_in_place(P: *mut bn254_snarks_g1_jac);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_cneg_in_place(P: *mut bn254_snarks_g1_jac, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_sum(
        r: *mut bn254_snarks_g1_jac,
        P: *const bn254_snarks_g1_jac,
        Q: *const bn254_snarks_g1_jac,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_add_in_place(
        P: *mut bn254_snarks_g1_jac,
        Q: *const bn254_snarks_g1_jac,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_diff(
        r: *mut bn254_snarks_g1_jac,
        P: *const bn254_snarks_g1_jac,
        Q: *const bn254_snarks_g1_jac,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_double(
        r: *mut bn254_snarks_g1_jac,
        P: *const bn254_snarks_g1_jac,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_double_in_place(P: *mut bn254_snarks_g1_jac);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_affine(
        dst: *mut bn254_snarks_g1_aff,
        src: *const bn254_snarks_g1_jac,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_from_affine(
        dst: *mut bn254_snarks_g1_jac,
        src: *const bn254_snarks_g1_aff,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_batch_affine(
        dst: *const bn254_snarks_g1_aff,
        src: *const bn254_snarks_g1_jac,
        n: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_scalar_mul_big_coef(
        P: *mut bn254_snarks_g1_jac,
        scalar: *const big254,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_scalar_mul_fr_coef(
        P: *mut bn254_snarks_g1_jac,
        scalar: *const bn254_snarks_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_scalar_mul_big_coef_vartime(
        P: *mut bn254_snarks_g1_jac,
        scalar: *const big254,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_scalar_mul_fr_coef_vartime(
        P: *mut bn254_snarks_g1_jac,
        scalar: *const bn254_snarks_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_multi_scalar_mul_big_coefs_vartime(
        r: *mut bn254_snarks_g1_jac,
        coefs: *const big254,
        points: *const bn254_snarks_g1_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bn254_snarks_g1_jac,
        coefs: *const bn254_snarks_fr,
        points: *const bn254_snarks_g1_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_is_eq(
        P: *const bn254_snarks_g1_prj,
        Q: *const bn254_snarks_g1_prj,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_is_neutral(P: *const bn254_snarks_g1_prj) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_set_neutral(P: *mut bn254_snarks_g1_prj);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_ccopy(
        P: *mut bn254_snarks_g1_prj,
        Q: *const bn254_snarks_g1_prj,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_neg(P: *mut bn254_snarks_g1_prj, Q: *const bn254_snarks_g1_prj);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_neg_in_place(P: *mut bn254_snarks_g1_prj);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_cneg_in_place(P: *mut bn254_snarks_g1_prj, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_sum(
        r: *mut bn254_snarks_g1_prj,
        P: *const bn254_snarks_g1_prj,
        Q: *const bn254_snarks_g1_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_add_in_place(
        P: *mut bn254_snarks_g1_prj,
        Q: *const bn254_snarks_g1_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_diff(
        r: *mut bn254_snarks_g1_prj,
        P: *const bn254_snarks_g1_prj,
        Q: *const bn254_snarks_g1_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_double(
        r: *mut bn254_snarks_g1_prj,
        P: *const bn254_snarks_g1_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_double_in_place(P: *mut bn254_snarks_g1_prj);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_affine(
        dst: *mut bn254_snarks_g1_aff,
        src: *const bn254_snarks_g1_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_from_affine(
        dst: *mut bn254_snarks_g1_prj,
        src: *const bn254_snarks_g1_aff,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_batch_affine(
        dst: *const bn254_snarks_g1_aff,
        src: *const bn254_snarks_g1_prj,
        n: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_scalar_mul_big_coef(
        P: *mut bn254_snarks_g1_prj,
        scalar: *const big254,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_scalar_mul_fr_coef(
        P: *mut bn254_snarks_g1_prj,
        scalar: *const bn254_snarks_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_scalar_mul_big_coef_vartime(
        P: *mut bn254_snarks_g1_prj,
        scalar: *const big254,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_scalar_mul_fr_coef_vartime(
        P: *mut bn254_snarks_g1_prj,
        scalar: *const bn254_snarks_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_multi_scalar_mul_big_coefs_vartime(
        r: *mut bn254_snarks_g1_prj,
        coefs: *const big254,
        points: *const bn254_snarks_g1_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bn254_snarks_g1_prj,
        coefs: *const bn254_snarks_fr,
        points: *const bn254_snarks_g1_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_is_eq(
        P: *const bn254_snarks_g2_aff,
        Q: *const bn254_snarks_g2_aff,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_is_neutral(P: *const bn254_snarks_g2_aff) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_set_neutral(P: *mut bn254_snarks_g2_aff);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_ccopy(
        P: *mut bn254_snarks_g2_aff,
        Q: *const bn254_snarks_g2_aff,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_is_on_curve(
        x: *const bn254_snarks_fp2,
        y: *const bn254_snarks_fp2,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_neg(P: *mut bn254_snarks_g2_aff, Q: *const bn254_snarks_g2_aff);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_neg_in_place(P: *mut bn254_snarks_g2_aff);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_is_eq(
        P: *const bn254_snarks_g2_jac,
        Q: *const bn254_snarks_g2_jac,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_is_neutral(P: *const bn254_snarks_g2_jac) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_set_neutral(P: *mut bn254_snarks_g2_jac);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_ccopy(
        P: *mut bn254_snarks_g2_jac,
        Q: *const bn254_snarks_g2_jac,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_neg(P: *mut bn254_snarks_g2_jac, Q: *const bn254_snarks_g2_jac);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_neg_in_place(P: *mut bn254_snarks_g2_jac);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_cneg_in_place(P: *mut bn254_snarks_g2_jac, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_sum(
        r: *mut bn254_snarks_g2_jac,
        P: *const bn254_snarks_g2_jac,
        Q: *const bn254_snarks_g2_jac,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_add_in_place(
        P: *mut bn254_snarks_g2_jac,
        Q: *const bn254_snarks_g2_jac,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_diff(
        r: *mut bn254_snarks_g2_jac,
        P: *const bn254_snarks_g2_jac,
        Q: *const bn254_snarks_g2_jac,
    );
}
